# parliament1812

./: .gitignore  CLAUDE.md  CROSS_PLATFORM_TEST_REPORT.md  DEPLOY.md  DEPLOYMENT.md  DEV_SETUP.md  README.md  TEST_RESULTS.md  docker-compose.yml  railway.toml
server/: .dockerignore  .env.example  .railwayignore  Cargo.toml  DEPLOY.md  Dockerfile  README.md  fly.toml
server/config/: development.toml  production.toml  staging.toml
server/migrations/: 001_create_users.sql  002_create_rooms.sql  003_create_players.sql  004_create_game_logs.sql  005_extended_schema.sql  006_password_reset_tokens.sql  007_seasons.sql  008_achievements.sql  009_quest_streak.sql  010_friend_enhancements.sql  011_iap_and_gems.sql  011_iap_single_player.sql  012_oauth_links.sql  013_weekly_challenges.sql  014_event_collector.sql  015_game_summaries.sql  016_attribution.sql  017_player_relationships.sql  018_weekly_bills.sql  019_ugc_bills.sql  020_referral_rewards.sql  021_season_pass.sql  022_discord_integration.sql  023_streamer_mode.sql  024_streaming_integration.sql
server/src/: lib.rs  main.rs  state.rs
server/src/api/: mod.rs  router.rs
server/src/auth/: jwt.rs  middleware.rs  mod.rs  oauth.rs  password.rs
server/src/cache/: game_cache.rs  mod.rs
server/src/config/: mod.rs  settings.rs
server/src/db/: codex.rs  friends.rs  games.rs  migrations.rs  mod.rs  oauth_links.rs  rankings.rs  users.rs
server/src/domain/: attribution.rs  card.rs  discord.rs  event.rs  game.rs  mod.rs  player.rs  referral.rs  (+10 more)
server/templates/: gazette.html
server/tests/: integration_tests.rs
(+588 files in other folders)
